--- a/SkyMallCore/SkyMallCoreWeb/appsettings.json
+++ b/SkyMallCore/SkyMallCoreWeb/appsettings.json
@@ -11,5 +11,14 @@
   },
   "SystemProvider": {
     "LoginProvider": "Cookie"
-  }
+  },
+
+  //"runtimes": { //加入runtime
+  //  "win7-x64": {},
+  //  "win7-x86": {},
+  //  "osx.10.10-x64": {},
+  //  "osx.10.11-x64": {},
+  //  "ubuntu.14.04-x64": {}
+  //}
+
 }
