--- a/SkyMallCore/SkyMallCoreWeb/appsettings.json
+++ b/SkyMallCore/SkyMallCoreWeb/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   //sal server connStr
   "ConnectionStrings": {
-    "DefaultConnection": "Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=NFineBase;Data Source=."
+    "DefaultConnection": "Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=NFineBase;Data Source=.",
+    "ProductConnection": "Server=tcp:dotnetcore.database.chinacloudapi.cn,1433;Initial Catalog=dotNetCoreDB;Persist Security Info=False;User ID=feaskye;Password=#netcore2018;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -11,7 +12,8 @@
   },
   "SystemProvider": {
     "LoginProvider": "Cookie"
-  },
+  }
+  //,
 
   //"runtimes": { //加入runtime
   //  "win7-x64": {},
