--- a/SkyMallCore/SkyMallCoreWeb/SkyMallCoreWeb.csproj
+++ b/SkyMallCore/SkyMallCoreWeb/SkyMallCoreWeb.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\SystemManage\Data\" />
     <Folder Include="Areas\SystemManage\Models\" />
+    <Folder Include="Areas\SystemSecurity\Models\" />
   </ItemGroup>
 
   <ItemGroup>
