完善后台管理

--- a/SkyMallCore/SkyMallCore.Services/SkyMallCore.Services.csproj
+++ b/SkyMallCore/SkyMallCore.Services/SkyMallCore.Services.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\SkyMallCore.Data\SkyMallCore.Data.csproj" />
     <ProjectReference Include="..\SkyMallCore.Models\SkyMallCore.Models.csproj" />
     <ProjectReference Include="..\SkyMallCore.Respository\SkyMallCore.Respository.csproj" />
+    <ProjectReference Include="..\SkyMallCore.ViewModel\SkyMallCore.ViewModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
