--- a/SkyMallCore/SkyMallCoreWeb/appsettings.json
+++ b/SkyMallCore/SkyMallCoreWeb/appsettings.json
@@ -8,19 +8,17 @@
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "SystemProvider": {
     "LoginProvider": "Cookie"
   }
-  //,
 
-  //"runtimes": { //加入runtime
-  //  "win7-x64": {},
-  //  "win7-x86": {},
-  //  "osx.10.10-x64": {},
-  //  "osx.10.11-x64": {},
-  //  "ubuntu.14.04-x64": {}
-  //}
+
 
 }
