代码整理及解决报错

--- a/SkyMallCore/SkyMallCore.Respository/SkyMallCore.Respository.csproj
+++ b/SkyMallCore/SkyMallCore.Respository/SkyMallCore.Respository.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\SkyMallCore.Core\SkyMallCore.Core.csproj" />
     <ProjectReference Include="..\SkyMallCore.Data\SkyMallCore.Data.csproj" />
     <ProjectReference Include="..\SkyMallCore.Models\SkyMallCore.Models.csproj" />
+    <ProjectReference Include="..\SkyMallCore.ViewModel\SkyMallCore.ViewModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
