--- a/SkyMallCore/SkyMallCoreWeb/appsettings.json
+++ b/SkyMallCore/SkyMallCoreWeb/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   //sal server connStr
   "ConnectionStrings": {
-    "DefaultConnection": "Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=NFineBase;Data Source=.",
+    "DefaultConnection": "Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=NFineBase;Data Source=."
   },
   "Logging": {
     "IncludeScopes": false,
