后台增加友链、文章、文章分类

--- a/SkyMallCore/SkyMallCoreWeb/SkyMallCoreWeb.csproj
+++ b/SkyMallCore/SkyMallCoreWeb/SkyMallCoreWeb.csproj
@@ -37,6 +37,33 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Areas\SystemManage\Views\ArticleCategory\Details.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\ArticleCategory\Form.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\ArticleCategory\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\Article\Details.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\Article\Form.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\Article\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\SysLink\Details.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\SysLink\Form.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\SystemManage\Views\SysLink\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Article\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
