--- a/SkyNetCore/SkyNetCore.Web/SkyNetCore.Web.csproj
+++ b/SkyNetCore/SkyNetCore.Web/SkyNetCore.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
