--- a/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
+++ b/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
@@ -20,6 +20,11 @@
 
   <ItemGroup>
     <Folder Include="Filters\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SkyMallCore.WebApiUtils\SkyMallCore.WebApiUtils.csproj" />
   </ItemGroup>
 
 </Project>
