ApiResult返回结果，参照ActionResult<T>处理方式

--- a/SkyMallCore/SkyMallCore.WebApiUtils/SkyMallCore.WebApiUtils.csproj
+++ b/SkyMallCore/SkyMallCore.WebApiUtils/SkyMallCore.WebApiUtils.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="microsoft.extensions.http" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="newtonsoft.json" Version="11.0.2" />
   </ItemGroup>
 
