--- a/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
+++ b/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
   </ItemGroup>
