--- a/SkyMallCore/SkyMallCore.WebApi/appsettings.json
+++ b/SkyMallCore/SkyMallCore.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=skyoilbase;user=root;password=123456;SslMode=none;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
