--- a/SkyMallCore/SkyMallCore.WebApiData/SkyMallCore.WebApiData.csproj
+++ b/SkyMallCore/SkyMallCore.WebApiData/SkyMallCore.WebApiData.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data" Version="8.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2" />
   </ItemGroup>
 
 </Project>
