--- a/SkyMallCore/SkyMallCore.WebApi/appsettings.json
+++ b/SkyMallCore/SkyMallCore.WebApi/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
+    //"DefaultConnection": "server=localhost;port=3306;database=skyoilbase;user=root;password=123456;SslMode=none;",
     "DefaultConnection": "server=localhost;port=3306;database=skyoilbase;user=root;password=123456;SslMode=none;"
   },
   "Logging": {
