--- a/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
+++ b/SkyMallCore/SkyMallCore.WebApi/SkyMallCore.WebApi.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.1.0" />
