--- a/SkyNetCore/SkyNetCore.Web/appsettings.json
+++ b/SkyNetCore/SkyNetCore.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Audience": {
+    "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA=="
+  }
 }
