--- a/SkyNetCore/SkyNetCore.Web/SkyNetCore.Web.csproj
+++ b/SkyNetCore/SkyNetCore.Web/SkyNetCore.Web.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
