--- a/SkyMallCore/SkyMallCore.WebApi/Properties/launchSettings.json
+++ b/SkyMallCore/SkyMallCore.WebApi/Properties/launchSettings.json
@@ -22,6 +22,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:63657/"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://localhost:{ServicePort}"
     }
   }
 }
