--- a/SkyMallCoreNew/SkyMallCore.Data/SkyMallCore.Data.csproj
+++ b/SkyMallCoreNew/SkyMallCore.Data/SkyMallCore.Data.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
