--- a/SkyMallCoreNew/SkyMallCore.Services/SkyMallCore.Services.csproj
+++ b/SkyMallCoreNew/SkyMallCore.Services/SkyMallCore.Services.csproj
@@ -18,7 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SkyMallCore.Core\SkyMallCore.Core.csproj" />
     <ProjectReference Include="..\SkyMallCore.Data\SkyMallCore.Data.csproj" />
     <ProjectReference Include="..\SkyMallCore.Models\SkyMallCore.Models.csproj" />
     <ProjectReference Include="..\SkyMallCore.Respository\SkyMallCore.Respository.csproj" />
@@ -31,6 +30,12 @@
     </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="SkyCoreLib.Utils">
+      <HintPath>..\packages\skycorelibs\SkyCoreLib.Utils.dll</HintPath>
+    </Reference>
+    <Reference Include="SkyCoreLib.Utils.Extension">
+      <HintPath>..\packages\skycorelibs\SkyCoreLib.Utils.Extension.dll</HintPath>
     </Reference>
   </ItemGroup>
 
