--- a/SkyMallCoreNew/UnitTestProject1/UnitTestProject1.csproj
+++ b/SkyMallCoreNew/UnitTestProject1/UnitTestProject1.csproj
@@ -13,7 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SkyMallCore.Core\SkyMallCore.Core.csproj" />
+    <Reference Include="SkyCoreLib.Utils">
+      <HintPath>..\packages\skycorelibs\SkyCoreLib.Utils.dll</HintPath>
+    </Reference>
+    <Reference Include="SkyCoreLib.Utils.Extension">
+      <HintPath>..\packages\skycorelibs\SkyCoreLib.Utils.Extension.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
