--- a/SkyMallCoreNew/SkyMallCoreWeb/appsettings.json
+++ b/SkyMallCoreNew/SkyMallCoreWeb/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     //"DefaultConnection": "Password=123;Persist Security Info=True;User ID=sa;Initial Catalog=SkyMallCoreNew;Data Source=PC161", //sqlserver
-    "DefaultConnection": "server=localhost;port=3306;database=skyoilbase;user=root;password=123456;SslMode=none"
+    "DefaultConnection": "server=localhost;port=3306;database=skycorebase;user=root;password=123456;SslMode=none"
   },
   "Logging": {
     "IncludeScopes": false,
