--- a/SkyNetCore/SkyNetCore.Web/Properties/launchSettings.json
+++ b/SkyNetCore/SkyNetCore.Web/Properties/launchSettings.json
@@ -22,11 +22,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://localhost:{ServicePort}"
     }
+    //,
+    //"Docker": {
+    //  "commandName": "Docker",
+    //  "launchBrowser": true,
+    //  "launchUrl": "{Scheme}://localhost:{ServicePort}"
+    //}
   }
 }
