--- a/SkyMallCoreNew/SkyCore.GlobalProvider/SkyCore.GlobalProvider.csproj
+++ b/SkyMallCoreNew/SkyCore.GlobalProvider/SkyCore.GlobalProvider.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
   </ItemGroup>
